# SorenNGTunnel-New

./: .gitignore  gradlew  j.bash  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/jni/: CMakeLists.txt  soren_jni.cpp  tun_helper.c
app/src/main/kotlin/com/soreng/tunnel/: SorenApp.kt
app/src/main/kotlin/com/soreng/tunnel/config/: ConfigParser.kt  ConfigProfile.kt  RuntimeConfigBuilder.kt
app/src/main/kotlin/com/soreng/tunnel/di/: AppModule.kt
app/src/main/kotlin/com/soreng/tunnel/psiphon/: PsiphonLibBridge.kt  PsiphonManager.kt
app/src/main/kotlin/com/soreng/tunnel/security/: SecurityManager.kt
app/src/main/kotlin/com/soreng/tunnel/stats/: StatsManager.kt
app/src/main/kotlin/com/soreng/tunnel/storage/: AppDatabase.kt  AppPreferences.kt  BinaryExtractor.kt  ConfigDao.kt  ConfigRepository.kt  SecureConfigStore.kt  SessionStatsDao.kt  SessionStatsEntity.kt  SplitTunnelCache.kt  SubscriptionDao.kt  SubscriptionEntity.kt
app/src/main/kotlin/com/soreng/tunnel/tunnel/: Tun2SocksManager.kt
app/src/main/kotlin/com/soreng/tunnel/ui/: MainActivity.kt
app/src/main/kotlin/com/soreng/tunnel/utils/: BatteryHelper.kt  NotificationPermissionHelper.kt  OemCompatHelper.kt  VpnKeepAliveWorker.kt
app/src/main/res/drawable/: ic_launcher.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+25 files in other folders)
