cmake_minimum_required(VERSION 3.22.1)
project(sorenjni VERSION 1.0.0 LANGUAGES C CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
find_library(log-lib log)
find_library(android-lib android)
add_library(sorenjni SHARED soren_jni.cpp tun_helper.c)
target_link_libraries(sorenjni ${log-lib} ${android-lib})
target_compile_options(sorenjni PRIVATE -O2 -fvisibility=hidden -fstack-protector-strong -DANDROID)
